[project]
name = "acme-insure-agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.5.9",
    "langchain==1.3.6",
    "langchain-chroma==1.1.0",
    "langchain-core==1.4.3",
    "langchain-openai==1.3.0",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.4",
    "langgraph-checkpoint==4.1.1",
    "langgraph-checkpoint-postgres==3.1.0",
    "langsmith==0.8.12",
    "psycopg-pool==3.2.4",
    "psycopg[binary]==3.2.3",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "tabulate==0.9.0",
]
